# fastapi-admin

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-and-publish.yml  publish.yml
fastapi_admin/: admin_register.py  admin_routes.py  api_routes.py  cli.py  crud.py  db.py  main.py  models.py  security.py  utils_autodiscover.py
fastapi_admin/templates/: admin_form.html  admin_index.html  admin_list.html  base.html  login.html
